--- a/src/pages/ReadingPage/reading.css
+++ b/src/pages/ReadingPage/reading.css
@@ -46,10 +46,8 @@
   display: flex;
   justify-content: center;
   gap: 3rem;
-  flex-wrap: wrap;
   margin-top: 3rem;
   flex-wrap: nowrap;
-  /* <-- importante */
 }
 
 .slot {
@@ -194,7 +192,7 @@
 }
 
 .modal-close:hover {
-  background: #f5d88c;
+  background: var(--color-gold);
   box-shadow: 0 0 12px rgba(230, 207, 168, 0.6);
 }
 
@@ -286,7 +284,6 @@
 .deck-spread .card {
   position: relative;
   margin-left: -90px;
-  /* Superposición */
   transition: transform 0.3s ease, z-index 0.3s ease;
   transform: rotate(calc(-3deg + var(--index) * 0.4deg));
   z-index: 1;
@@ -301,7 +298,7 @@
   margin-left: 0;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 790px) {
 
   .reading-slots {
     flex-direction: row;
@@ -312,7 +309,7 @@
 
   .slot {
     width: 100px;
-    height: 200px;
+    height: 210px;
     padding: 0.5rem;
   }
 
@@ -324,7 +321,6 @@
     font-size: 0.8rem;
   }
 
-  .slot-content img,
   .slot-card {
     width: 100%;
     height: auto;
